[package]
name = "Linux_process_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.29.0"  # For system and process information
tokio = { version = "1.28.0", features = ["full"] }  # For async runtime
crossterm = "0.26.0"  # For terminal handling
procfs = "0.16" # For getting the nice of a system
chrono = "0.4" # For formatting the start time
libc = "0.2" # Setting the niceness
anyhow = "1.0" # Some debugging?
ratatui = "0.24.0"
hostname = "0.3" # For getting system hostname
rhai = "1.16.1"  # or latest version